{
    "name": "FlyDangerousActions",
    "maps": [
        {
            "name": "Ship",
            "id": "319c08b3-97e0-4636-a79a-bb6bde0a90f7",
            "actions": [
                {
                    "name": "Pitch",
                    "type": "Value",
                    "id": "8043ded1-0ef3-4f85-b28b-3e3139edb133",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Roll",
                    "type": "Value",
                    "id": "4fd269dd-a7ed-42d2-864e-e528e090bd09",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Yaw",
                    "type": "Value",
                    "id": "f1e682e9-2180-45dd-bf3e-cdefbee29575",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Throttle",
                    "type": "Value",
                    "id": "725b3d83-6282-4fd3-8a1b-ad37029f5146",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LateralH",
                    "type": "Value",
                    "id": "509f03a6-fbc1-428b-be5b-adef4a4a1d5f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LateralV",
                    "type": "Value",
                    "id": "dbbf62a4-6b89-4ff1-b0c2-1399be3f5b1f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Boost",
                    "type": "Button",
                    "id": "ae9270a1-0fa9-4611-bb01-798738d7842c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FlightAssistToggle",
                    "type": "Button",
                    "id": "ce9c21e5-76be-402d-beed-36b5b132f0ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "89d913f5-1c0b-4f48-ad2b-3bcf86512369",
                    "path": "<Joystick>/stick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "flight stick",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "keyboard axis",
                    "id": "0c3f738d-702d-461a-ad1a-035961539daa",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "3f84313b-3551-4448-a201-85f7bff2ea23",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard + mouse",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "9298a74d-c1c7-4f47-bf8c-387b27c32459",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard + mouse",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d9365d2d-6058-4a31-b55d-b2b8fb28062c",
                    "path": "<Joystick>/z",
                    "interactions": "",
                    "processors": "Invert,Normalize(min=-1,max=0.722)",
                    "groups": "flight stick",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "keyboard axis",
                    "id": "63f29310-dc19-451f-94cc-4ad6e84f182b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throttle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "c081f54c-70ab-423f-b2d8-2efdc1761fe0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard + mouse",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "a749d237-31cd-4d12-90f5-b03d4cf04cfc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard + mouse",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7abb1e17-bf1a-4f18-bde7-9f3833f1f333",
                    "path": "<Joystick>/stick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "flight stick",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "keyboard axis",
                    "id": "8120d13b-aea1-4179-993b-df84b0940b34",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "60058f84-5d0d-4c06-aa72-4365a03feda5",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard + mouse",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "acb04a75-4a54-43b8-83cf-d9966afa224b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard + mouse",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "331ba9bf-d059-408b-9c90-91a373888d8b",
                    "path": "<Joystick>/rz",
                    "interactions": "",
                    "processors": "",
                    "groups": "flight stick",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "keyboard axis",
                    "id": "e6ecec4c-37ac-4679-8d7d-5e761a20654f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "64ccfdd2-3c2a-4961-9687-010eef565c5c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard + mouse",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "8092fd1c-b58a-4a58-8b47-11ff7c7d69d5",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard + mouse",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "keyboard axis",
                    "id": "bcd22e4c-b938-4fe0-8fb0-b23cae25bd58",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LateralH",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "f5f5b2b9-5172-45b4-8818-0c4daadfb4f1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard + mouse",
                    "action": "LateralH",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "331a2f6e-cd1a-4b4f-9ae7-5a4a87416cc1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard + mouse",
                    "action": "LateralH",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "hat axis",
                    "id": "473a7484-45f4-4487-974b-1c2217427e04",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LateralH",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "eba04c70-1cff-462b-bfd5-86e5c2d2a139",
                    "path": "<HID::Saitek Saitek X52 Pro Flight Control System>/button25",
                    "interactions": "",
                    "processors": "",
                    "groups": "flight stick",
                    "action": "LateralH",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "5f43ec82-7fb8-466f-9ddd-fc08b5f72652",
                    "path": "<HID::Saitek Saitek X52 Pro Flight Control System>/button27",
                    "interactions": "",
                    "processors": "",
                    "groups": "flight stick",
                    "action": "LateralH",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "keyboard axis",
                    "id": "78f6e3b5-17bb-458c-8b1c-3fa19d8b382b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LateralV",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "494849b9-b571-4ba5-8cb7-521964f6e452",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard + mouse",
                    "action": "LateralV",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "550a0776-272e-43a0-978a-23d708dc2a09",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard + mouse",
                    "action": "LateralV",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "hat axis",
                    "id": "a9c40068-8436-4f06-81ac-0220d3b71ccc",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LateralV",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "7a93a7bb-fd73-4963-b375-2e4713846ee7",
                    "path": "<HID::Saitek Saitek X52 Pro Flight Control System>/button24",
                    "interactions": "",
                    "processors": "",
                    "groups": "flight stick",
                    "action": "LateralV",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "3570a57c-02f8-46fc-95c8-ea6f9b0dce14",
                    "path": "<HID::Saitek Saitek X52 Pro Flight Control System>/button26",
                    "interactions": "",
                    "processors": "",
                    "groups": "flight stick",
                    "action": "LateralV",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "14aaf69e-25ad-48cb-9525-86177bca1162",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard + mouse",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54866b4b-381b-451e-ae16-5b261fad8874",
                    "path": "<Joystick>/button31",
                    "interactions": "",
                    "processors": "",
                    "groups": "flight stick",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc747143-d180-4195-aa6c-e34a265716fc",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard + mouse",
                    "action": "FlightAssistToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c79d88a-9c6c-4284-9ec7-98990003e4e8",
                    "path": "<Joystick>/button7",
                    "interactions": "",
                    "processors": "",
                    "groups": "flight stick",
                    "action": "FlightAssistToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "keyboard + mouse",
            "bindingGroup": "keyboard + mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "flight stick",
            "bindingGroup": "flight stick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}